@@ -43,6 +43,11 @@ start() {
     --log-opt max-file=9 \
     docker.baozou.com/baozou/spark:1.5-py3.4 \
     spark-submit --master local[*] \
+    --conf "spark.serializer=org.apache.spark.serializer.KryoSerializer" \
+    --conf "spark.cleaner.ttl=300" \
+    --conf "spark.executor.extraJavaOptions=-XX:+UseConcMarkSweepGC" \
+    --driver-java-options "-XX:+UseConcMarkSweepGC" \
+    --files /data/KSE/log4j.properties \
     --jars /opt/spark/jars/spark-streaming-kafka-assembly.jar,/opt/spark/jars/elasticsearch-hadoop.jar \
     --py-files /data/KSE/adapters.py /data/KSE/submit.py network 172.17.42.1 9999 ${elasticsearchURL} \
     2>&1
